--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@eslint/config-array": "^0.17.1",
-    "@eslint/object-schema": "^2.1.4",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.15.20",
     "@nextui-org/input": "^2.2.1",
     "@nextui-org/react": "^2.4.1",
@@ -20,10 +20,11 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "axios": "^1.7.2",
+    "bignumber.js": "^9.1.2",
     "body-parser": "^1.20.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
+    "ethers": "^5.0.0",
     "express": "^4.19.2",
     "google-map-react": "^2.2.1",
     "lucide-react": "^0.394.0",
